<resources>
    <string name="app_name">Taxi</string>
    <string name="title_activity_login">Taxi</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Password or email is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name_registration">Name</string>
    <string name="button_back_to_personal_registration">Back</string>
    <string name="button_next_to_driver_registration">Next</string>
    <string name="password_registration"> Password </string>
    <string name="repeat_password">Repeat password</string>
    <string name="numbre_registration">Mobile number</string>
    <string name="second_number_registration">Second mobile number</string>
    <string name="model_registration">Model</string>
    <string name="manufacturer_registration">Brand</string>
    <string name="plate_number">Plate number</string>
    <string name="sign_up">Sign up</string>
    <string name="text_lable_num_passenger">Passengers count</string>
    <string name="text_lable_car_type">Car type</string>
    <string name="driver_license">Driver license</string>
    <string name="code_license">Code of license</string>
    <string name="license_expiration_date">License expiration date</string>
    <string name="category_license">Category license</string>
    <string name="front_foto_license">Make foto of front your license</string>
    <string name="back_foto_license">make foto of back yor license</string>
    <string name="i_am_driver">I am a driver</string>
    <string name="car_type_title">type car</string>
    <string-array name="set_num_passenger">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="num_passenger_title">Passengers count</string>
    <string name="set_car_type">Status</string>
    <string name="title_reset_password_activity">Forgot password?</string>
    <string name="email_reset_password_activity">Email</string>
    <string name="button_reset_password_activity">Reset</string>
    <string name="button_send_request">Send</string>
    <string name="title_activity_client_account">Client account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="order_name"></string>
    <string name="start_point"> start point</string>
    <string name="end_point">end point</string>
    <string name="price">price</string>
    <string name="statis">status</string>
    <string name="time_ride">Time ride</string>
    <string name="date_ride">Date ride:</string>
    <string name="additional_requirements">Additional requirements</string>
    <string name="name_personal_page">Name</string>
    <string name="password_personal_page"> Password </string>
    <string name="repeat_personal_page">Repeat password</string>
    <string name="numbre_personal_page">Mobile number</string>
    <string name="second_number_personal_page">Second mobile number</string>
    <string name="update_personal_page">update</string>
    <string name="ok_personal_page">Ok</string>
    <string name="model_personal_page">Model</string>
    <string name="manufacturer_personal_page">Brand</string>
    <string name="plate_personal_page">Plate number</string>
    <string name="text_lable_num_passenger_personal_page">Passengers count</string>
    <string name="text_lable_car_type_personal_page">Car type</string>
    <string name="car_characteristics"> Car characteristics </string>
    <string name="title_item_list">Time and date of order</string>
    <string name="calculate_price"> calculate price</string>
    <string name="km_distance">distance</string>
    <string name="customer_name"> customer </string>
    <string name="driver_name"> driver </string>
    <string name="value"> 0 </string>
    <string name="accept">accept</string>
    <string name="decline">decline</string>
    <string name="type_status_order"> Status order </string>
    <string name="change_order_status_lable">Change order status</string>
    <string name="type_status_reckoning"> type reckoning </string>
    <string name="taxi_driver">taxi driver</string>
    <string name="duration">duration</string>
    <string-array name="change_status_client_add">
        <item>New</item>
    </string-array>
    <string-array name="change_status_client_new">
        <item>New</item>
        <item>Cancelled</item>
    </string-array>
    <string-array name="change_status_client_accepted">
        <item>Accepted</item>
        <item>Cancelled</item>
    </string-array>
    <string-array name="change_status_client_waiting">
        <item>Waiting</item>
        <item>Cancelled</item>
    </string-array>
    <string-array name="change_status_driver_accept">
        <item>Accept</item>
        <item>Waiting</item>
        <item>New</item>
    </string-array>
    <string-array name="change_status_driver_waiting">
        <item>Waiting</item>
        <item>Processing</item>
        <item>Cancelled</item>

    </string-array>
    <string-array name="change_status_driver_processing">
        <item>Processing</item>
        <item>Done</item>
    </string-array>
    <string-array name="change_status_driver_new">
        <item>New</item>
        <item>Accepted</item>
    </string-array>
    <string-array name="set_type_reckoning">
        <item>Cash</item>
        <item>Credit Card</item>
    </string-array>
    <string name="button_ok"> OK </string>
    <string-array name="sort_value">
        <item>All</item>
        <item>Accepted</item>
        <item>Cancelled</item>
        <item>Done</item>
        <item>New</item>
        <item>Waiting</item>
        <item>Processing</item>
    </string-array>
    <string name="title_activity_driver_account">Driver account</string>
    <string name="value_order">Inform order</string>
    <string name="without_requirement">Without additional requir</string>
    <string name="spinner_change_sing">Change status menu</string>
    <string name="title_info_order_driver"> ORDER INFO </string>
    <string name="customer_account_info">Cust info</string>
    <string name="name_info">Name: </string>
    <string name="email_info">Email: </string>
    <string name="mobile_number_inf">Mobile: </string>
    <string name="manufacturer_inf">Brand: </string>
    <string name="model_inf">Model: </string>
    <string name="plate_number_inf">Plate number: </string>
    <string name="seats_number_inf">Passengers count: </string>
    <string name="car_type_inf">Car type: </string>
    <string name="error_not_equals_passwords">Passwords do not match </string>
    <string name="dont_inputed_fields">Please input all fields</string>
    <string name="input_all_fields">Please input all fields</string>
    <string name="main_theme_loading">Loading</string>
    <string name="text_of_loading">Wait while loading...</string>
    <string name="add_order">Add order</string>
    <string name="order_list">Order list</string>
    <string name="edit_profile">Edit profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="radio_button_now">Now</string>
    <string name="radio_button_today">Today</string>
    <string name="radio_button_tomorrow">Tomorrow</string>
    <string name="time_text">00:00:00</string>
    <string name="prise_label_add_order">Total price:</string>
    <string name="additional_request">Additional request</string>
    <string name="title_activity_add_order">Add order</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_main_settings">Main settings</string>
    <string name="tab_addition_requirest">Additional</string>
    <string-array name="type_car">
        <item>Type of car</item>
        <item>Passenger car</item>
        <item>Track</item>
        <item>Mini bus</item>
    </string-array>
    <string-array name="type_reconing">
        <item>Type payment</item>
        <item>Cash</item>
        <item>Card</item>
    </string-array>
    <string-array name="type_pets">
        <item>Pets</item>
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string-array name="type_baggage">
        <item>Big baggage</item>
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string-array name="type_extra_price">
        <item>Extra price</item>
        <item>30</item>
        <item>50</item>
        <item>70</item>
        <item>90</item>
        <item>100</item>
        <item>150</item>
    </string-array>
    <string-array name="type_driver_services">
        <item>Driver services</item>
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string-array name="type_number_passengers">
        <item>Passengers count</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="validation_code_driver_license">Valid format: "YYY XXXXXX",where Y - cyrillic symbol, X - digit</string>
    <string name="validation_plate_number_driver_profile">Should be "XX YYYY XX" where X - cyrillic symbol, Y - digit</string>
    <string name="validation_phone_number">Should contains 10 digits andcould start from "+38"</string>
    <string name="validation_expiration_time">Should be "XXXX-XX-XX" where X  - digit</string>
    <string name="validation_obligatory_field">Obligatory field</string>
    <string name="validation_email">Email is not correct</string>
    <string name="validation_password">Password must contain more than 6 characters</string>
    <string name="account_driver">About driver</string>
    <string name="date_of_order">Date of order:</string>
    <string name="delete_order">Delete</string>
    <string name="code_from_email">Code from your email</string>
    <string name="new_password">New password</string>
    <string name="new_password_repeat">Repeat new password</string>
    <string name="code_for_reset_will_be_send">Code for reset password will be sent to your email</string>
    <string name="time_order_for_now">Now</string>
    <string name="turn_on_notification">Notifications</string>
    <string name="new_order_notification">New order</string>
    <string name="notific_when">When: </string>
    <string name="notific_where">Where: </string>
    <string name="notific_price">Price: </string>
    <string name="notific_waiting_driver">Driver is waiting</string>
    <string name="notific_plate_number">Plate number:</string>
    <string name="notific_model">Model:</string>
    <string name="notific_manufacturer">Brand:</string>
    <string name="notific_name">Name:</string>
    <string name="notific_changed_order_status">Changed order status</string>
    <string name="notific_order_status">Order status:</string>
    <string name="formatted_place_data">
        Name: %1$s\nAddress: %2$s\nPhone: %3$s\nWebsite: %4$s\nRating: %5$s\nId: %6$s\n
    </string>
    <string name="not_inputted_2_point">Required point not entered</string>
    <string name="next_point">next point</string>
    <string name="operation_completed">Operation completed</string>
    <string name="cant_perform">Can`t perform an operation</string>
</resources>