<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/model_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/model_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/model_registration"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/brend_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/model_field">

            <EditText
                android:id="@+id/brend_registration_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/manufacturer_registration"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/plate_number_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/brend_registration">

            <EditText
                android:id="@+id/plate_number_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plate_number"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/car_info_regis"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/plate_number_registration"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_lable_num_passenger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_lable_num_passenger" />

                <Spinner
                    android:id="@+id/set_num_passenger"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:prompt="@string/num_passenger_title">

                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_lable_car_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/text_lable_num_passenger"
                    android:text="@string/text_lable_car_type" />

                <Spinner
                    android:id="@+id/set_car_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/set_num_passenger"
                    android:prompt="@string/car_type_title">

                </Spinner>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>