<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_reset_password"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:id="@+id/image_forgot_password"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_forgot_password" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_field_reset_password"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/reset_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_reset_password_activity"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/email_field_reset_password"
        android:layout_below="@id/image_forgot_password"
        android:layout_centerHorizontal="true"
        android:text="@string/title_reset_password_activity" />

    <Button
        android:id="@+id/reset_password_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_field_reset_password"
        android:layout_centerHorizontal="true"
        android:text="@string/button_reset_password_activity"
        android:textColor="@color/colorPrimaryDark" />
</RelativeLayout>
