<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="3dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9">

            <ImageView
                android:id="@+id/notific_image"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/default_license" />
        </LinearLayout>

        <TextView
            android:id="@+id/notif_add_order_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="5"
            android:text="@string/new_order_notification"
            android:textColor="@color/main_grey"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/notif_time_resive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="3dp"
            android:layout_weight="8"
            android:textColor="@color/main_grey"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notific_when"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/notific_when"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/main_grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notific_where"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/notific_where"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/main_grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notific_price"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/notific_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/main_grey" />
    </LinearLayout>
</LinearLayout>